--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1 {
 }
 textarea {
     display: block;
+    background-color: rgb(236, 236, 236);
     height: 350px;
     width: 60%;
     border: none;
