--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ textarea {
 }
 textarea:focus {
     outline: none;
-    box-shadow: 0px 0px 0 6px rgb(255, 167, 38);
+    /* box-shadow: 0px 0px 0 6px rgb(255, 167, 38); */
+    box-shadow: 0px 0px 0 6px rgb(47, 171, 230);
 }
 
 /* FOOTER */
