--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,11 @@ footer {
     color: rgb(169, 189, 187);
     margin: 0;
 }
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 750px) {
+    textarea {
+        width: 75%;
+    }
+}
