--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,15 @@ textarea:focus {
     /* box-shadow: 0px 0px 0 6px rgb(255, 167, 38); */
     box-shadow: 0px 0px 0 6px rgb(47, 171, 230);
 }
+#converter {
+    font-family: capitol, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1.8rem;
+    text-align: center;
+    text-transform: lowercase;
+    color: rgb(255, 167, 38);
+}
 
 /* FOOTER */
 
