--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,16 @@ textarea:focus {
     text-transform: lowercase;
     color: rgb(255, 167, 38);
 }
+#selection-placeholder {
+    display: inline-block;
+    position: relative;
+    font-family: capitol, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: rgb(255, 218, 185);
+    border-bottom: 1px solid rgb(255, 167, 38);
+    cursor: pointer;
+}
 
 /* FOOTER */
 
