--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,18 @@ textarea:focus {
     border-bottom: 1px solid rgb(255, 167, 38);
     cursor: pointer;
 }
+#arrow {
+    display: inline-block;
+    position: relative;
+    border: solid rgb(255, 218, 185);
+    border-width: 0 1px 1px 0;
+    margin: 0 0 5px 10px;
+    padding: 4px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transition-duration: 0.3s;
+    cursor: pointer;
+}
 
 /* FOOTER */
 
