--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,12 @@ textarea:focus {
     box-shadow: 0px 0px 0 6px rgb(47, 171, 230);
 }
 #converter {
-    display: inline-block;
+    display: block;
     font-family: capitol, sans-serif;
     font-weight: 600;
     font-style: normal;
     font-size: 1.8rem;
+    line-height: 1.5rem;
     text-align: center;
     text-transform: lowercase;
     color: rgb(255, 167, 38);
