add #selection-placeholder span
Flexed the span, so the phrase "select case" and the arrow are aligned at the ends of the placeholder underline.

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ textarea:focus {
     border-bottom: 1px solid rgb(255, 167, 38);
     cursor: pointer;
 }
+#selection-placeholder span {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 #arrow {
     display: inline-block;
     position: relative;
