add #selection-placeholder:hover #dropdown
Now, when the user hovers over the placeholder, the dropdown items are revealed.

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ textarea:focus {
 .options:hover {
     background-color: rgb(189, 44, 0);
 }
+#selection-placeholder:hover #dropdown {
+    display: block;
+}
 
 /* FOOTER */
 
