add #selection-placeholder:hover #arrow
When the user hovers over the placeholder, and the options are revealed, the arrow will spin until it points upward.

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ textarea:focus {
 #selection-placeholder:hover #dropdown {
     display: block;
 }
+#selection-placeholder:hover #arrow {
+    transform: rotate(225deg);
+    margin: 0;
+}
 
 /* FOOTER */
 
