--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ textarea:focus {
     border: none;
     cursor: pointer;
 }
+.options:active {
+    background-color: rgb(189, 44, 0);
+}
 /* media query solves sticky hover on mobile */
 @media (hover:hover) {
     .options:hover {
