update #selection-placeholder hover states
For now, I'm commenting out the placeholder hover states that rotate the arrow and display the dropdown, as they seem to break the click events.

--- a/css/style.css
+++ b/css/style.css
@@ -127,13 +127,13 @@ textarea:focus {
     .options:hover {
         background-color: rgb(189, 44, 0);
     }
-    #selection-placeholder:hover #dropdown {
+    /* #selection-placeholder:hover #dropdown {
         display: block;
     }
     #selection-placeholder:hover #arrow {
         transform: rotate(225deg);
         margin: 0;
-    }
+    } */
 }
 
 /* FOOTER */
