--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ textarea,
     font-style: normal;
 }
 h1,
-.options {
+.options,
+.confirmed {
     font-family: typeka, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -139,6 +140,10 @@ textarea:focus {
         transform: rotate(225deg);
         margin: 0;
     } */
+}
+.confirmed {
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
 }
 
 /* FOOTER */
