--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,14 @@ textarea,
     font-style: normal;
 }
 h1,
+#case-selection,
 .options,
 .confirmed {
     font-family: typeka, sans-serif;
     font-weight: 400;
     font-style: normal;
 }
-#converter,
-#case-selection {
+#converter-text {
     font-family: capitol, sans-serif;
     font-style: normal;
 }
@@ -69,13 +69,18 @@ textarea:focus {
     /* box-shadow: 0px 0px 0 6px rgb(255, 167, 38); */
     box-shadow: 0px 0px 0 6px rgb(47, 171, 230);
 }
-#converter {
-    display: block;
+#converter-wrapper {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    max-width: fit-content;
+}
+#converter-text {
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 1.5rem;
-    text-align: center;
     color: rgb(255, 167, 38);
+    margin: .625rem .625rem 0 0;
 }
 #selection-placeholder {
     display: inline-block;
@@ -87,14 +92,13 @@ textarea:focus {
     justify-content: space-between;
     align-items: center;
     min-width: 150px;
-    font-weight: 300;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     line-height: 1.5rem;
     letter-spacing: .05rem;
     color: rgb(255, 218, 185);
     background-color: inherit;
     border: none;
-    padding: 0 2px 0 0;
+    padding: 0 2px 2px 0;
     cursor: pointer;
 }
 #arrow {
