--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,9 @@ footer {
         width: 75%;
     }
 }
+
+@media only screen and (max-width: 415px) {
+    #converter-text {
+        font-size: 1.6rem;
+    }
+}
