--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,25 @@ footer {
         font-size: 1.6rem;
     }
 }
+
+@media only screen and (max-width: 320px) {
+    h1 {
+        font-size: 1.7rem;
+    }
+    textarea {
+        margin: 2rem auto;
+    }
+    #converter-wrapper {
+        flex-direction: column;
+    }
+    #converter-text {
+        font-size: 1.6rem;
+        margin: 0;
+    }
+    footer {
+        padding: 1.1rem 1.4rem;
+    }
+    #copyright {
+        font-size: .7rem;
+    }
+}
