--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,9 @@ footer {
 }
 
 @media only screen and (max-width: 415px) {
+    textarea {
+        font-size: 1.3rem;
+    }
     #converter-text {
         font-size: 1.6rem;
     }
@@ -181,6 +184,9 @@ footer {
         font-size: 1.7rem;
     }
     textarea {
+        font-size: 1.1rem;
+        height: 210px;
+        padding: 1.5rem;
         margin: 2rem auto;
     }
     #converter-wrapper {
