--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,14 @@ h1 {
 h1 span {
     text-transform: uppercase;
 }
+#icon-wrapper,
+textarea {
+    width: 60%;
+}
 #icon-wrapper {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 60%;
     margin: 2rem auto 0;
 }
 #clipboard {
@@ -74,7 +77,6 @@ textarea {
     color: rgb(82, 82, 82);
     background-color: rgb(236, 236, 236);
     height: 250px;
-    width: 60%;
     border: none;
     border-radius: 25px;
     padding: 2rem;
@@ -182,6 +184,7 @@ footer {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 750px) {
+    #icon-wrapper,
     textarea {
         width: 75%;
     }
