--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(28, 33, 62);
+    background-image: url('../images/mint-typewriter.svg');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* FONTS */
@@ -45,20 +48,23 @@ h1 {
     font-size: 2.3rem;
     letter-spacing: .1rem;
     text-align: center;
-    color: rgb(224, 241, 234);
+    /* color: rgb(224, 241, 234); */
+    color: rgb(68, 54, 54);
 }
 h1 span {
     text-transform: uppercase;
 }
 #icon-wrapper,
 textarea {
-    width: 60%;
+    /* width: 60%; */
+    width: 35%;
 }
 #icon-wrapper {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin: 2rem auto 0;
+    /* margin: 2rem auto 0; */
+    margin: 1rem auto 0;
 }
 #clipboard {
     display: block;
@@ -72,11 +78,13 @@ textarea {
     letter-spacing: .05rem;
     color: rgb(82, 82, 82);
     background-color: rgb(236, 236, 236);
-    height: 250px;
+    /* height: 250px; */
+    height: 150px;
     border: none;
     border-radius: 25px;
     padding: 2rem;
-    margin: 1rem auto 3rem;
+    /* margin: 1rem auto 3rem; */
+    margin: 1rem auto 6rem;
     resize: none;
 }
 textarea:focus {
