--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     background-image: url('../images/mint-typewriter.svg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 }
 
 /* FONTS */
