--- a/css/style.css
+++ b/css/style.css
@@ -180,11 +180,11 @@ textarea:focus {
 footer {
     width: 100%;
     margin-top: auto;
-    padding: 1.1rem 2rem;
+    padding: .5rem 1rem;
 }
 #copyright {
-    font-size: .9rem;
-    color: rgb(169, 189, 187);
+    font-size: .8rem;
+    color: rgb(236, 236, 236);
     margin: 0;
 }
 
