update typerwriter image
Swapped out the old drawing for the new one.

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(28, 33, 62);
-    background-image: url('../images/mint-typewriter.svg');
+    background-image: url('../images/mint-green-typewriter.svg');
     background-repeat: no-repeat;
     background-position: center;
 }
