--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,14 @@ textarea:focus {
     letter-spacing: .1rem;
 }
 
+#airplane {
+    display: none;
+    width: 100px;
+    margin: 1rem auto;
+    position: relative;
+    transform: rotate3d(1, 3, 5, 45deg);
+}
+
 /* FOOTER */
 
 footer {
