--- a/css/style.css
+++ b/css/style.css
@@ -177,12 +177,33 @@ textarea:focus {
     letter-spacing: .1rem;
 }
 
+/* ANIMATION */
+
 #airplane {
     display: none;
     width: 100px;
     margin: 1rem auto;
     position: relative;
     transform: rotate3d(1, 3, 5, 45deg);
+}
+
+.flight {
+    -webkit-animation: flying-plane 3s ease-in-out;
+    animation: flying-plane 3s ease-in-out;
+}
+
+@-webkit-keyframes flying-plane {
+    0% {transform: rotate3d(1, 3, 5, 45deg); left: 0px; top: 0px;}
+    25% {transform: rotate3d(1, 3, 5, 22deg);}
+    50% {transform: rotate3d(1, 3, 5, 6deg);}
+    100% {transform: rotate3d(1, 3, 5, 1deg); left: 100%; top: 200px;}
+}
+
+@keyframes flying-plane {
+    0% {transform: rotate3d(1, 3, 5, 45deg); left: 0px; top: 0px;}
+    25% {transform: rotate3d(1, 3, 5, 22deg);}
+    50% {transform: rotate3d(1, 3, 5, 6deg);}
+    100% {transform: rotate3d(1, 3, 5, 1deg); left: 100%; top: 200px;}
 }
 
 /* FOOTER */
