--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ textarea:focus {
 footer {
     width: 100%;
     margin-top: auto;
-    padding: .5rem 1rem;
+    padding: 1rem 2rem;
 }
 #copyright {
     font-size: .8rem;
