--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,9 @@ body {
     min-height: -webkit-fill-available;
     margin: 0;
     padding: 0;
-    background-color: rgb(28, 33, 62);
-    /* background-image: url('../images/mint-green-typewriter.svg'); */
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url('../images/art-deco-fans-pattern-01.svg');
+    background-repeat: repeat;
+    background-size: 60px;
 }
 
 /* FONTS */
