--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h1 {
     letter-spacing: .1rem;
     text-align: center;
     color: rgb(224, 241, 234);
+    margin: .5rem 0;
 }
 h1 span {
     text-transform: uppercase;
@@ -190,6 +191,19 @@ textarea:focus {
     25% {transform: rotate3d(1, 3, 5, 22deg);}
     50% {transform: rotate3d(1, 3, 5, 6deg);}
     100% {transform: rotate3d(1, 3, 5, 1deg); left: 100%; top: 200px;}
+}
+
+/* TYPEWRITER */
+
+#typewriter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem auto .5rem;
+    width: 10%;
+} 
+#typewriter {
+    width: 100%;
 }
 
 /* FOOTER */
