update mobile h1 size
Reduced the size of the h1 at the max-width: 415px breakpoint.

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,9 @@ footer {
 }
 
 @media only screen and (max-width: 415px) {
+    h1 {
+        font-size: 1.8rem;
+    }
     #icon-wrapper,
     textarea {
         width: 80%;
