--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,18 @@ h1,
     font-style: normal;
 }
 
-/* MAIN */
+/* HEADER */
 
+#typewriter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem auto .5rem;
+    width: 10%;
+} 
+#typewriter {
+    width: 100%;
+}
 h1 {
     font-size: 2.3rem;
     letter-spacing: .1rem;
@@ -53,6 +63,9 @@ h1 {
 h1 span {
     text-transform: uppercase;
 }
+
+/* MAIN */
+
 #icon-wrapper,
 textarea {
     /* width: 60%; */
@@ -191,19 +204,6 @@ textarea:focus {
     25% {transform: rotate3d(1, 3, 5, 22deg);}
     50% {transform: rotate3d(1, 3, 5, 6deg);}
     100% {transform: rotate3d(1, 3, 5, 1deg); left: 100%; top: 200px;}
-}
-
-/* TYPEWRITER */
-
-#typewriter-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1.5rem auto .5rem;
-    width: 10%;
-} 
-#typewriter {
-    width: 100%;
 }
 
 /* FOOTER */
