--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1.5rem auto .5rem;
+    margin: 0 auto .5rem;
     width: 10%;
 } 
 #typewriter {
@@ -71,15 +71,13 @@ h1 span {
 
 #icon-wrapper,
 textarea {
-    /* width: 60%; */
-    /* width: 35%; */
     width: 50%;
 }
 #icon-wrapper {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin: 2rem auto 0;
+    margin: 1rem auto 0;
 }
 #clipboard {
     display: flex;
@@ -108,11 +106,11 @@ textarea {
     letter-spacing: .05rem;
     color: rgb(82, 82, 82);
     background-color: rgb(236, 236, 236);
-    height: 200px;
+    height: 160px;
     border: none;
     border-radius: 25px;
     padding: 1rem 1.5rem;
-    margin: 1rem auto 3rem;
+    margin: .5rem auto 2rem;
     resize: none;
 }
 textarea:focus {
