--- a/css/style.css
+++ b/css/style.css
@@ -108,16 +108,12 @@ textarea:focus {
     animation: fadeText 1.5s ease-in;
 }
 @-webkit-keyframes fadeText {
-    0% {color: rgba(82, 82, 82, 0);}
-    25% {color: rgba(82, 82, 82, .25);}
-    50% {color: rgba(82, 82, 82, .5);}
-    100% {color: rgba(82, 82, 82, 1);}
+    from {color: rgba(82, 82, 82, 0);}
+    to {color: rgba(82, 82, 82, 1);}
 }
 @keyframes fadeText {
-    0% {color: rgba(82, 82, 82, 0);}
-    25% {color: rgba(82, 82, 82, .25);}
-    50% {color: rgba(82, 82, 82, .5);}
-    100% {color: rgba(82, 82, 82, 1);}
+    from {color: rgba(82, 82, 82, 0);}
+    to {color: rgba(82, 82, 82, 1);}
 }
 #converter-wrapper {
     display: flex;
