update @media (hover:hover)
Removed the #retoggle:hover style and combined the icons under a .icon:hover declaration, so they both have the same blue background.

--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,7 @@ textarea {
 }
 /* prevent sticky hover, on mobile */
 @media (hover:hover) {
-    #retoggle:hover {
-        filter: brightness(80%);
-        background-color: rgb(189, 44, 0);
-    }
-    #clipboard:hover {
+    .icon:hover {
         filter: brightness(80%);
         background-color: rgb(19, 24, 56);
     }
