--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* GLOBAL */
 
 html {
-    font-size: 16;
+    font-size: 16px;
     box-sizing: border-box;
     height: -webkit-fill-available;
 }
