--- a/css/style.css
+++ b/css/style.css
@@ -54,15 +54,20 @@ header {
 
 /* MAIN */
 
+#clipboard-wrapper,
 #icon-wrapper,
 textarea {
     width: 50%;
 }
+#clipboard-wrapper,
 #icon-wrapper {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin: 1rem auto 0;
+    margin: 0 auto;
+}
+#clipboard-wrapper {
+    margin-top: 1rem;
 }
 #retoggle {
     display: none;
@@ -263,6 +268,7 @@ footer {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 1000px) {
+    #clipboard-wrapper,
     #icon-wrapper,
     textarea {
         width: 65%;
@@ -270,6 +276,7 @@ footer {
 }
 
 @media only screen and (max-width: 415px) {
+    #clipboard-wrapper,
     #icon-wrapper,
     textarea {
         width: 80%;
