--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,29 @@ textarea {
     display: block;
     height: 35px;
 }
+#clipboard-notice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(189, 44, 0);
+    border-radius: 4px;
+    margin: 0 0 .5rem 0;
+    visibility: hidden;
+}
+#clipboard-notice::after {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    bottom: -7px;
+    right: 23px;
+    background-color: rgb(189, 44, 0);
+    border-radius: 2px;
+    transform: rotate(45deg);
+}
 textarea {
     display: block;
     font-size: 1.5rem;
