add #clipboard-notice z-index
Added a z-index of 2 to the clipboard notification, so the arrow of the speech bubble sits above the clipboard icon's hover circle. (Chose not to increase the margins, since the converter dropdown already opens dangerously low on mobile devices.)

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ textarea {
     border-radius: 4px;
     margin: 0 0 .5rem 0;
     visibility: hidden;
+    z-index: 2;
 }
 #clipboard-notice::after {
     content: '';
