create #togglecase margin
Mobile test, to see if margin will show at the bottom of the dropdown.

--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,9 @@ textarea:focus {
         background-color: rgb(189, 44, 0);
     }
 }
+#togglecase {
+    margin-bottom: 4rem;
+}
 .confirmed {
     letter-spacing: .1rem;
 }
