create .ital rule
A style to set certain spans of text in italics.

--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,9 @@ textarea:focus {
     letter-spacing: .04rem;
     color: rgb(47, 47, 50);
 }
+.ital {
+    font-style: italic;
+}
 
 /* FOOTER */
 
