create #note-text-wrapper rule
Moved the max-height and overflow properties from .note-text to #note-text-wrapper, to prevent the paragraphs from each creating their own scrollbars.

--- a/css/style.css
+++ b/css/style.css
@@ -353,12 +353,14 @@ textarea:focus {
     font-style: italic;
     color: rgb(189, 13, 13);
 }
+#note-text-wrapper {
+    max-height: 300px;
+    overflow: scroll;
+}
 .note-text {
     font-size: 1.1rem;
     letter-spacing: .04rem;
     color: rgb(47, 47, 50);
-    max-height: 300px;
-    overflow: scroll;
 }
 .ital {
     font-style: italic;
