create #chevron-wrapper rule
Set display and background-color properties for the chevron's wrapper.

--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,10 @@ textarea:focus {
     font-weight: bold;
     color: rgb(35, 35, 37);
 }
+#chevron-wrapper {
+    display: none;
+    background-color: rgb(255, 247, 242);
+}
 
 /* FOOTER */
 
