--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,16 @@ textarea:focus {
     display: none;
     background-color: rgb(255, 247, 242);
 }
+#chevron {
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
+    transform: rotate(90deg);
+    color: rgb(179, 169, 169);
+    padding-right: 2rem;
+    margin: 0;
+    cursor: default;
+}
 
 /* FOOTER */
 
