--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,10 @@ textarea:focus {
     margin: 0;
     cursor: default;
 }
+.rotated-chevron {
+    transform: rotate(270deg) !important;
+    padding-right: 0 !important;
+}
 
 /* FOOTER */
 
