--- a/css/style.css
+++ b/css/style.css
@@ -384,20 +384,23 @@ textarea:focus {
 #chevron-wrapper {
     display: none;
     background-color: rgb(255, 247, 242);
+    padding-bottom: .5rem;
+}
+#chevron-bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    background-color: rgb(226, 90, 40);
+    margin: 0 auto;
 }
 #chevron {
-    font-size: 1.3rem;
-    font-weight: bold;
-    text-align: center;
-    transform: rotate(90deg);
-    color: rgb(179, 169, 169);
-    padding-right: 2rem;
-    margin: 0;
-    cursor: default;
+    width: 20px;
 }
 .rotated-chevron {
-    transform: rotate(270deg) !important;
-    padding-right: 0 !important;
+    transform: rotate(180deg) !important;
 }
 
 /* FOOTER */
