--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,10 @@ textarea:focus {
     font-weight: bold;
     color: rgb(35, 35, 37);
 }
+.quote-color {
+    padding: .2rem;
+    background-color: rgb(231, 131, 26);
+}
 .quote-text {
     padding-left: .5rem;
 }
