--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,7 @@ h2 {
     font-size: 1.5rem;
     font-weight: bold;
     color: rgb(35, 35, 37);
+    margin: 1.5rem 0 1rem 0;
 }
 table {
     padding-left: 1.5rem;
