create max-width:650px MQ
When the screen is 650px wide, or smaller, expand the #phrases-container divs to a width of 50 percent, so the phrases stay on one line.

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,12 @@ footer {
     }
 }
 
+@media only screen and (max-width: 650px) {
+    #phrases-container > div {
+        width: 50%;
+    }
+}
+
 @media only screen and (max-width: 415px) {
 
     /* MAIN */
