--- a/css/style.css
+++ b/css/style.css
@@ -458,9 +458,10 @@ footer {
     }
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 850px) {
     #phrases-container > div {
         width: 50%;
+        flex-wrap: nowrap;
     }
 }
 
