--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,9 @@ footer {
     #title-case-note {
         padding: 1.6rem;
     }
+    h1 {
+        margin: 1.5rem 0 0 0;
+    }
 }
 
 @media only screen and (max-width: 320px) {
