--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ footer {
         padding: 1.6rem;
     }
     h1 {
-        margin: 1.5rem 0 0 0;
+        margin: 1.5rem 0 1rem 0;
     }
     .note-text,
     .quote-text {
