--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     min-height: -webkit-fill-available;
     margin: 0;
     padding: 0;
+    background-color: rgb(28, 33, 62);
     background-image: url('../images/art-deco-pattern-01.svg');
     background-repeat: repeat;
     background-size: 60px;
