--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,8 @@ footer {
     margin-top: auto;
     padding: .7rem 1rem;
     background-color: rgba(15, 20, 45, .5);
+    position: relative;
+    bottom: 0;
 }
 #copyright {
     font-size: .8rem;
