--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ textarea:focus {
     margin: 1rem auto;
     position: relative;
     transform: rotate3d(1, 3, 5, 45deg);
+    z-index: 2;
 }
 .flight {
     -webkit-animation: flying-plane 3s ease-in-out;
