update textarea caret-color
Set the caret color the same shade of orange as the dropdown options.

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ textarea {
     letter-spacing: .05rem;
     color: rgb(82, 82, 82);
     background-color: rgb(236, 236, 236);
+    caret-color: rgb(255, 87, 34);
     height: 160px;
     border: none;
     border-radius: 25px;
