--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ textarea {
 }
 textarea:focus {
     outline: none;
-    box-shadow: 0px 0px 0 6px rgb(47, 171, 230);
+    box-shadow: 0px 0px 5px 4px rgb(90, 231, 189);
 }
 .fade-in {
     -webkit-animation: fadeText 1.5s ease-in;
