--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ textarea {
     resize: none;
 }
 textarea:focus {
-    outline: none;
+    outline: 1px solid rgba(28, 33, 62, 0.14);
     box-shadow: 0px 0px 5px 4px rgb(90, 231, 189);
 }
 .fade-in {
